--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: gxanshu/astro-decap-cms-starter #replace with your githu repo
+  repo: TeeWallz/monty-astro-decap-cms
   branch: main
   squash_merges: true
   open_authoring: true
