--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
+    "dev": "concurrently \"npm run start\" \"npm run decap-proxy\"",
+    "start": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "decap-proxy": "npx decap-server"
   },
   "dependencies": {
     "@astrojs/sitemap": "^1.3.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/parser": "5.59.7",
+    "concurrently": "^9.1.0",
     "eslint": "8.41.0",
     "eslint-plugin-astro": "0.27.1",
     "prettier": "2.8.8",
