--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,10 @@
 		}
 	},
 
+	"mounts": [
+    	"type=bind,source=${localEnv:HOME}/.ssh,target=/root/.ssh,readonly",
+	],
+
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
